--- a/mvn-dao/src/main/resources/jdbc.properties
+++ b/mvn-dao/src/main/resources/jdbc.properties
@@ -4,7 +4,7 @@ driverClassName:com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/mulmvn?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 #\u7528\u6237\u540D\u5BC6\u7801
 username=root
-password=199412
+password=pwd
 filters:stat
 #\u5B9A\u4E49\u521D\u59CB\u8FDE\u63A5\u6570
 initialSize=0
