--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
 jdk:
   - oraclejdk8
-install: cd mvn-parent && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
+before_script: cd mvn-parent
