--- a/mvn-common/pom.xml
+++ b/mvn-common/pom.xml
@@ -13,6 +13,6 @@
         <groupId>com.gude</groupId>
         <artifactId>mvn-parent</artifactId>
         <version>${parent.version}</version>
-        <relativePath>../mvn-parent/</relativePath>
+        <relativePath>../mvn-parent/pom.xml</relativePath>
     </parent>
 </project>
