--- a/mvn-parent/pom.xml
+++ b/mvn-parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.gude</groupId>
     <artifactId>mvn-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${global.version}</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -22,6 +22,8 @@
         <!-- 控制日志版本 -->
         <slf4j.version>1.7.7</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
+
+        <global.version>0.1-SNAPSHOT</global.version>
     </properties>
 
     <!--声明子模块-->
